# wasm-test

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  build.sh  package-lock.json  package.json  run_test.sh  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.devcontainer/: Dockerfile
app/: CMakeLists.txt  hello.cpp  wasm.cpp  wasm.hpp
plugins/: vite-plugin-watch-client.ts  vite-plugin-watch.ts
src/: App.tsx  main.tsx
src/components/: EmscriptenDemo.css  EmscriptenDemo.tsx
src/hooks/: useEmscriptenModule.tsx
src/wasm/hello/: index.ts
src/wasm/hello/src/app/: CMakeLists.txt  hello.cpp  wasm.cpp
watch/: client.js  server.js  text.js
